--- a/project-1/styles.css
+++ b/project-1/styles.css
@@ -45,21 +45,6 @@ font-family: Arial;
 /*  position: fixed; */
 }
 
-.container {
-  overflow: hidden;
-  background-color: white ;
-  font-family: Arial;
-}
-
-.container a {
-  float: left;
-  font-size: 16px;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  /*text-decoration: none;*/
-}
-
 .contact {
   text-align: center;
 }
@@ -95,4 +80,52 @@ input[type=text], select, textarea {
   margin-left: 0px;
   margin-right: 0px;
   resize: vertical;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 25%;
+  padding: 0 10px;
+}
+
+.row {margin: 0 -5px;}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
+.card {
+  box-shadow: 0 4px 8px 5px rgba(0, 0, 0, 0.2);
+  padding: 15px;
+  margin-bottom: 20px;
+  text-align: center;
+  background-color: #a39aac;
+  color: #f2f2f2;
+}
+
+.card:hover {
+  transform: scale(1.05);
+}
+
+a:hover {
+  color : black ;
+}
+
+a {
+  text-decoration: none;
+  color:inherit;
 }
