--- a/project-1/styles.css
+++ b/project-1/styles.css
@@ -3,9 +3,9 @@
   background-image: url("./Images/header.jpg");
   background-size: auto;
 }*/
-
+/* hii bro this is sethumj*/
 body {
-  background-color: white;
+  background-color: rgb(233, 233, 241);
 }
 
 h1 {
