--- a/project-1/styles.css
+++ b/project-1/styles.css
@@ -4,6 +4,7 @@
   background-size: auto;
 }*/
 /* hii bro this is sethumj*/
+/* hi this bharath */
 body {
   background-color: rgb(233, 233, 241);
 }
